--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,6 @@ table {
 	border-spacing: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     display: none;
-}
+} */
